--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class=" navbar-collapse" id="navbarsContainer">
-    这里是主页
+    这里是主页hi
     <!--登陆判断-->
     <div sec:authorize="isAuthenticated()"
          class="row">
