--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -9,130 +9,138 @@
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <div th:fragment="common">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">门禁管理系统</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#second">
-                    <i class="fa fa-fw fa-facebook"></i>
-                    <span class="nav-link-text">系统权限管理</span>
-                </a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+        <a class="navbar-brand" href="index.html">门禁管理系统</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#second">
+                        <i class="fa fa-fw fa-facebook"></i>
+                        <span class="nav-link-text">系统权限管理</span>
+                    </a>
 
-                <ul class="sidenav-second-level collapse" id="second">
-                    <li>
-                        <a href="./role/list.html" th:href="@{~/role/list}">角色管理</a>
-                    </li>
-                    <li>
-                        <a href="./department/add.html" th:href="@{~/department/add}">学院（部门）管理</a>
-                    </li>
-                </ul>
+                    <ul class="sidenav-second-level collapse" id="second">
+                        <li>
+                            <a href="./role/list.html" th:href="@{~/role/list}" onclick="navgateTo(event)">角色管理</a>
+                        </li>
+                        <li>
+                            <a href="./department/add.html" th:href="@{~/department/add}" onclick="navgateTo(event)">学院（部门）管理</a>
+                        </li>
+                    </ul>
 
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents1">
-                    <i class="fa fa-fw fa-car"></i>
-                    <span class="nav-link-text">门禁设置管理</span>
-                </a>
-                <ul class="sidenav-second-level collapse" id="collapseComponents1">
-                    <li>
-                        <a href="./facility/list.html" th:href="@{~/facility/list}">设备管理</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents4">
-                    <i class="fa fa-fw fa-coffee"></i>
-                    <span class="nav-link-text">工作区设置管理</span>
-                </a>
-                <ul class="sidenav-second-level collapse" id="collapseComponents4">
-                    <li>
-                        <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区列表</a>
-                    </li>
-                    <li>
-                        <a href="./locate/add.html" th:href="@{~/locate/add}">工作区添加</a>
-                    </li>
-                </ul>
-            </li>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents1">
+                        <i class="fa fa-fw fa-car"></i>
+                        <span class="nav-link-text">门禁设置管理</span>
+                    </a>
+                    <ul class="sidenav-second-level collapse" id="collapseComponents1">
+                        <li>
+                            <a href="./facility/list.html" th:href="@{~/facility/list}" onclick="navgateTo(event)">设备管理</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents4">
+                        <i class="fa fa-fw fa-coffee"></i>
+                        <span class="nav-link-text">工作区设置管理</span>
+                    </a>
+                    <ul class="sidenav-second-level collapse" id="collapseComponents4">
+                        <li>
+                            <a href="./locate/edit.html" th:href="@{~/locate/edit}" onclick="navgateTo(event)">工作区列表</a>
+                        </li>
+                        <li>
+                            <a target="mainframe" href="./locate/add.html" th:href="@{~/locate/add}" onclick="navgateTo(event)">工作区添加</a>
+                        </li>
+                    </ul>
+                </li>
 
 
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents2">
+                        <i class="fa fa-fw fa-floppy-o"></i>
+                        <span class="nav-link-text">白名单管理</span>
+                    </a>
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents2">
-                    <i class="fa fa-fw fa-floppy-o"></i>
-                    <span class="nav-link-text">白名单管理</span>
-                </a>
+                    <ul class="sidenav-second-level collapse" id="collapseComponents2">
+                        <li>
+                            <a href="./whitelist/list.html" th:href="@{~/whitelist/list}" onclick="navgateTo(event)">白名单查询</a>
+                        </li>
+                        <li>
+                            <a href="./whitelist/add.html" th:href="@{~/whitelist/add}" onclick="navgateTo(event)">白名单添加</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents"
+                       data-parent="#exampleAccordion">
+                        <i class="fa fa-fw fa-wrench"></i>
+                        <span class="nav-link-text">人员管理</span>
+                    </a>
+                    <ul class="sidenav-second-level collapse" id="collapseComponents">
+                        <li>
+                            <a th:href="@{/users/list}" onclick="navgateTo(event)">查询用户</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/users/add}" onclick="navgateTo(event)">添加用户</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages"
+                       data-parent="#exampleAccordion">
+                        <i class="fa fa-fw fa-user"></i>
+                        <span class="nav-link-text">流水信息管理</span>
+                    </a>
+                    <ul class="sidenav-second-level collapse" id="collapseExamplePages">
+                        <li>
+                            <a href="./record/search.html" th:href="@{~/record/search}" onclick="navgateTo(event)">流水信息查询</a>
+                        </li>
+                        <li>
+                            <a href="./record/facility.html" th:href="@{~/record/facilitySearch}" onclick="navgateTo(event)">门禁流水统计</a>
+                        </li>
+                        <li>
+                            <a href="./record/individual.html" th:href="@{~/record/individualSearch}" onclick="navgateTo(event)">个人流水查询</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav sidenav-toggler">
+                <li class="nav-item">
+                    <a class="nav-link text-center" id="sidenavToggler">
+                        <i class="fa fa-fw fa-angle-left"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link "
+                       th:text="'当前日期：'+${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}">
+                        <i class="fa fa-fw fa-calendar"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                        <i class="fa fa-fw fa-user"></i>用户</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                        <i class="fa fa-fw fa-sign-out"></i>注销</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-                <ul class="sidenav-second-level collapse" id="collapseComponents2">
-                    <li>
-                        <a href="./whitelist/list.html" th:href="@{~/whitelist/list}">白名单查询</a>
-                    </li>
-                    <li>
-                        <a href="./whitelist/add.html" th:href="@{~/whitelist/add}">白名单添加</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
-                    <i class="fa fa-fw fa-wrench"></i>
-                    <span class="nav-link-text">人员管理</span>
-                </a>
-                <ul class="sidenav-second-level collapse" id="collapseComponents">
-                    <li>
-                        <a th:href="@{/users/list}">查询用户</a>
-                    </li>
-                    <li>
-                        <a th:href="@{/users/add}">添加用户</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-                    <i class="fa fa-fw fa-user"></i>
-                    <span class="nav-link-text">流水信息管理</span>
-                </a>
-                <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-                    <li>
-                        <a href="./record/search.html" th:href="@{~/record/search}">流水信息查询</a>
-                    </li>
-                    <li>
-                        <a href="./record/facility.html" th:href="@{~/record/facilitySearch}">门禁流水统计</a>
-                    </li>
-                    <li>
-                        <a href="./record/individual.html" th:href="@{~/record/individualSearch}">个人流水查询</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <ul class="navbar-nav sidenav-toggler">
-            <li class="nav-item">
-                <a class="nav-link text-center" id="sidenavToggler">
-                    <i class="fa fa-fw fa-angle-left"></i>
-                </a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link " th:text="'当前日期：'+${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}">
-                    <i class="fa fa-fw fa-calendar"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                    <i class="fa fa-fw fa-user"></i>用户</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                    <i class="fa fa-fw fa-sign-out"></i>注销</a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
 </div>
+
+
 
 </body>
 
