--- a/src/main/resources/templates/record/show.html
+++ b/src/main/resources/templates/record/show.html
@@ -8,7 +8,7 @@
     <div th:include="common_css :: common_css"></div>
 
 </head>
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body>
 
 <script type="text/javascript">
     function search() {
@@ -42,20 +42,7 @@
         }
 
     }
-
 </script>
-<!--{"locate":locate,-->
-<!--"type":type,-->
-<!--"role":role,-->
-<!--"department":department,-->
-<!--"timeFrom":time1,-->
-<!--"timeTo":time2,-->
-<!--"fid":fid,-->
-<!--"cardid":cardid-->
-<!--}-->
-
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
     <div class="container-fluid">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -199,7 +186,6 @@
         </a>
         <div th:include="common_js :: common_js"></div>
     </div>
-</div>
 
 </body>
 </html>
