--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -10,10 +10,8 @@
 </head>
 
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body>
 
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -32,7 +30,6 @@
             </div>
         </form>
     </div>
-</div>
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
