--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -9,9 +9,7 @@
     <div th:include="common_css :: common_css"></div>
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
+<body>
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -76,7 +74,6 @@
     </a>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
-</div>
 
 </body>
 
