--- a/src/main/resources/templates/whitelist/add.html
+++ b/src/main/resources/templates/whitelist/add.html
@@ -10,10 +10,8 @@
     <div th:include="common_css :: common_css"></div>
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
+<body>
 
-<div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -56,21 +54,12 @@
             </div>
         </div>
     </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
-    <footer class="sticky-footer">
-        <div class="container">
-            <div class="text-center">
-            </div>
-        </div>
-    </footer>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
-</div>
 
 </body>
 
