--- a/src/main/resources/templates/department/add.html
+++ b/src/main/resources/templates/department/add.html
@@ -10,10 +10,9 @@
 </head>
 
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body >
 
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
+<!--<div th:include="mainframe :: common"></div>-->
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -51,7 +50,6 @@
         </div>
 
     </div>
-</div>
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
