--- a/src/main/resources/templates/locate/add.html
+++ b/src/main/resources/templates/locate/add.html
@@ -5,12 +5,11 @@
 <head>
     <meta charset="UTF-8"/>
     <title th:text="${locateModel.title}">查看</title>
-
     <!--公共css-->
     <div th:include="common_css :: common_css"></div>
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body>
 
 <script type="text/javascript">
     function saveLocate() {
@@ -35,9 +34,6 @@
 
     };
 </script>
-<div th:include="mainframe :: common"></div>
-
-<div class="content-wrapper">
     <div class="container-fluid">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -58,19 +54,6 @@
             </div>
         </div>
     </div>
-    <footer class="sticky-footer">
-        <div class="container">
-            <div class="text-center">
-            </div>
-        </div>
-    </footer>
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fa fa-angle-up"></i>
-    </a>
-    <!--公共js-->
-    <div th:include="common_js :: common_js"></div>
-</div>
-
 </body>
 
 </html>
