--- a/src/main/resources/templates/module/index.html
+++ b/src/main/resources/templates/module/index.html
@@ -3,37 +3,38 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>门禁管理系统</title>
-  <div th:include="common_css :: common_css"></div>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>门禁管理系统</title>
+    <div th:include="common_css :: common_css"></div>
 </head>
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common">
-</div>
 
-  <div class="content-wrapper">
-    <div class="container-fluid">
-      <div class="card mb-3">
-        <div class="card-header">
-          <i class="fa fa-weixin"></i>这里是主页</div>
-        <div class="card-body">
-        </div>
-      </div>
+<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<div th:include="mainframe :: common"></div>
+<div class="content-wrapper">
+    <iframe src="/locate/add" style="width: 100%; height: 550px;" frameborder="0" id="contentFrame" ></iframe>
+</div>
+<footer class="sticky-footer">
+    <div class="container">
     </div>
-    <footer class="sticky-footer">
-      <div class="container">
-      </div>
-    </footer>
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fa fa-angle-up"></i>
-    </a>
-    <!--公共js-->
-    <div th:include="common_js :: common_js"></div>
-  </div>
+</footer>
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fa fa-angle-up"></i>
+</a>
+<!--公共js-->
+<div th:include="common_js :: common_js"></div>
+</div>
+<script>
+    function navgateTo(evt) {
+        evt.preventDefault();
+        var contentFrame = document.getElementById("contentFrame");
+        contentFrame.src = evt.srcElement.href;
+    }
+</script>
 </body>
+
 
 </html>
