--- a/src/main/resources/templates/record/individual.html
+++ b/src/main/resources/templates/record/individual.html
@@ -8,7 +8,7 @@
     <div th:include="common_css :: common_css"></div>
 
 </head>
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body>
 
 <script type="text/javascript">
     function search() {
@@ -94,70 +94,67 @@
 
 </script>
 
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
-    <div class="container-fluid">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a href="#" th:text="${recordModel.title}">流水管理</a>
-            </li>
-            <li class="breadcrumb-item active" th:text="${recordModel.subtitle}">信息查询</li>
-        </ol>
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-md-6 offset-md-3">
-                    <form id="form2" class="form-group" role="form" action="/record/individualSearch">
+<div class="container-fluid">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#" th:text="${recordModel.title}">流水管理</a>
+        </li>
+        <li class="breadcrumb-item active" th:text="${recordModel.subtitle}">信息查询</li>
+    </ol>
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-6 offset-md-3">
+                <form id="form2" class="form-group" role="form" action="/record/individualSearch">
+                    <div class="form-group" style="width: auto">
                         <div class="form-group" style="width: auto">
-                            <div class="form-group" style="width: auto">
-                                <label for="cardid" class="col-md-3 form-group">卡号</label>
-                                <input type="text" name="cardid" class="form-group col-md-5 "
-                                       id="cardid"/>
-                            </div>
+                            <label for="cardid" class="col-md-3 form-group">卡号</label>
+                            <input type="text" name="cardid" class="form-group col-md-5 "
+                                   id="cardid"/>
                         </div>
-                        <div class="form-group" style="width: auto">
-                            <label for="time1" class="col-md-3 form-group">起始时间</label>
-                            <input style="width: auto" type="date" col-md-3 name="time1" class="form-group col-md-8"
-                                   id="time1"/>
-                        </div>
-
-                        <div class="form-group" style="width: auto">
-                            <label for="time2" class="col-md-3 form-group">截止时间</label>
-                            <input style="width: auto" type="date" name="time2" class="form-group col-md-8" id="time2"/>
-                        </div>
-                    </form>
-                    <div class="col-md column text-xl-center">
-                        <button type="button" onclick="search()" class="btn btn-default btn-warning  offset-md-0">查询
-                        </button>
                     </div>
+                    <div class="form-group" style="width: auto">
+                        <label for="time1" class="col-md-3 form-group">起始时间</label>
+                        <input style="width: auto" type="date" col-md-3 name="time1" class="form-group col-md-8"
+                               id="time1"/>
+                    </div>
+
+                    <div class="form-group" style="width: auto">
+                        <label for="time2" class="col-md-3 form-group">截止时间</label>
+                        <input style="width: auto" type="date" name="time2" class="form-group col-md-8" id="time2"/>
+                    </div>
+                </form>
+                <div class="col-md column text-xl-center">
+                    <button type="button" onclick="search()" class="btn btn-default btn-warning  offset-md-0">查询
+                    </button>
                 </div>
             </div>
         </div>
-        <div class="table-responsive">
-            <table style="visibility:hidden" class="table table-bordered text-center" id="dataTable111" width="100%"
-                   cellspacing="0">
-                <thead>
-                <tr>
-                    <th>设备</th>
-                    <th>卡号</th>
-                    <th>姓名</th>
-                    <th>性别</th>
-                    <th>身份</th>
-                    <th>部门/学院</th>
-                    <th>刷卡时间</th>
-                    <th>类型</th>
-                    <th>工作区</th>
-                </tr>
-                <tbody id="tbody1">
-                </tbody>
-            </table>
-        </div>
     </div>
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fa fa-angle-up"></i>
-    </a>
-    <div th:include="common_js :: common_js"></div>
-<!--</div>-->
+    <div class="table-responsive">
+        <table style="visibility:hidden" class="table table-bordered text-center" id="dataTable111" width="100%"
+               cellspacing="0">
+            <thead>
+            <tr>
+                <th>设备</th>
+                <th>卡号</th>
+                <th>姓名</th>
+                <th>性别</th>
+                <th>身份</th>
+                <th>部门/学院</th>
+                <th>刷卡时间</th>
+                <th>类型</th>
+                <th>工作区</th>
+            </tr>
+            <tbody id="tbody1">
+            </tbody>
+        </table>
+    </div>
 </div>
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fa fa-angle-up"></i>
+</a>
+<div th:include="common_js :: common_js"></div>
+<!--</div>-->
 
 </body>
 </html>
