--- a/src/main/resources/templates/record/modify.html
+++ b/src/main/resources/templates/record/modify.html
@@ -7,84 +7,87 @@
     <meta charset="UTF-8">
     <title>流水管理</title>
 </head>
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
-    <div class="container-fluid">
-        <!-- Breadcrumbs-->
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a href="#">流水管理</a>
-            </li>
-            <li class="breadcrumb-item active">信息查询</li>
-        </ol>
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example</div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered text-center"  id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <td>账号</td>
-                            <td>姓名</td>
-                            <td>性别</td>
-                            <td>操作</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="user : ${userModel.userList}">
-                            <td th:text="${user.cardid}">null</td>
-                            <td th:text="${user.name}">null</td>
-                            <td th:text="${user.sex}">null</td>
-                            <td><a th:href="@{'/users/'+${user.cardid}}" th:text="查看">null</a></td>
-                        </tr>
-                        <tr>
-                            <td colspan="3">
-                                <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">添加用户</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+<body>
+<div class="container-fluid">
+    <!-- Breadcrumbs-->
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#">流水管理</a>
+        </li>
+        <li class="breadcrumb-item active">信息查询</li>
+    </ol>
+    <!-- Example DataTables Card-->
+    <div class="card mb-3">
+        <div class="card-header">
+            <i class="fa fa-table"></i> Data Table Example
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                    <tr>
+                        <td>账号</td>
+                        <td>姓名</td>
+                        <td>性别</td>
+                        <td>操作</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user : ${userModel.userList}">
+                        <td th:text="${user.cardid}">null</td>
+                        <td th:text="${user.name}">null</td>
+                        <td th:text="${user.sex}">null</td>
+                        <td><a th:href="@{'/users/'+${user.cardid}}" th:text="查看">null</a></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">
+                            <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">添加用户</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
+        </div>
+        <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}">
+            版权保留xjtuse
         </div>
     </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
-    <footer class="sticky-footer">
-        <div class="container">
-            <div class="text-center">
-                <small>Copyright © Your Website 2017 / More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></small>
-            </div>
+</div>
+<!-- /.container-fluid-->
+<!-- /.content-wrapper-->
+<footer class="sticky-footer">
+    <div class="container">
+        <div class="text-center">
+            <small>Copyright © Your Website 2017 / More Templates <a href="http://www.cssmoban.com/" target="_blank"
+                                                                     title="模板之家">模板之家</a> - Collect from <a
+                    href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></small>
         </div>
-    </footer>
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fa fa-angle-up"></i>
-    </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
+    </div>
+</footer>
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fa fa-angle-up"></i>
+</a>
+<!-- Logout Modal-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" href="login.html">Logout</a>
             </div>
         </div>
     </div>
-   <div th:include="common_js :: common_js">
-   </div>
+</div>
+<div th:include="common_js :: common_js">
 </div>
 
 </body>
