--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -10,12 +10,8 @@
 </head>
 
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body>
 
-<div th:include="mainframe :: common"></div>
-<div class="content-wrapper">
-    <div class="container-fluid">
-        <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="#" th:text="${roleModel.title}">人员管理</a>
@@ -53,8 +49,6 @@
                 </table>
             </div>
         </div>
-    </div>
-</div>
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
