--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -9,10 +9,7 @@
     <div th:include="common_css :: common_css"></div>
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
-
-<div class="content-wrapper">
+<body >
     <div class="container">
         <!-- Breadcrumbs-->
         <div class="row">
@@ -98,7 +95,6 @@
     </a>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
-</div>
 
 </body>
 
