--- a/src/main/resources/templates/whitelist/modify.html
+++ b/src/main/resources/templates/whitelist/modify.html
@@ -10,10 +10,7 @@
     <div th:include="common_css :: common_css"></div>
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
-
-<div class="content-wrapper">
+<body >
     <div class="container-fluid">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -69,40 +66,11 @@
             </div>
         </div>
     </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
-    <footer class="sticky-footer">
-        <div class="container">
-            <div class="text-center">
-            </div>
-        </div>
-    </footer>
-    <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
-</div>
 
 </body>
 
